[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking"] }
rustls = "0.21.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
pcap = { version = "1", features = ["capture-stream"] }
